fix(asset-group): group on every projected column so the search survives v2 rewriting (#6435)